# lightMP

./: AUTHORS  Makefile  Makefile.am  Makefile.darwin  Makefile.in  Makefile~  README  README.md  bint_2_binary.c  bint_2_binary.loT  bint_add.c  bint_add.lo  bint_atobint.c  bint_atobint.lo  bint_bits.c  bint_bits.lo  bint_compares.c  bint_compares.lo  bint_dec.c  bint_dec.lo  bint_display.c  bint_display.lo  bint_div.c  bint_div.lo  bint_div_2.c  bint_div_2.lo  bint_divshort.c  bint_divshort.lo  bint_egcd.c  bint_egcd.lo  bint_gcd.c  bint_gcd.lo  bint_getbitsize.c  bint_getbitsize.lo  bint_inc.c  bint_inc.lo  bint_introutines.c  bint_introutines.lo  bint_inverse.c  bint_inverse.lo  (+31 more)
.deps/: bint_2_binary.Plo  bint_add.Plo  bint_atobint.Plo  bint_bits.Plo  bint_compares.Plo  bint_dec.Plo  bint_display.Plo  bint_div.Plo  bint_div_2.Plo  bint_divshort.Plo  bint_egcd.Plo  bint_gcd.Plo  bint_getbitsize.Plo  bint_inc.Plo  bint_introutines.Plo  bint_inverse.Plo  bint_memory.Plo  bint_mod.Plo  bint_mod_exp.Plo  bint_mul.Plo  bint_mul_long.Plo  bint_pow2long.Plo  bint_random.Plo  bint_shift_right_digit.Plo  bint_short_div.Plo  bint_sub.Plo
.libs/: liblightmp.0.0.0.dylib  liblightmp.lai
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
demo/: a.out  compile  demo  demo.c  demo.gcda
