include_HEADERS=endian.h lightmp.h sgprimes.h
lib_LTLIBRARIES=liblightmp.la
liblightmp_la_SOURCES= \
bint_2_binary.c bint_compares.c bint_div.c bint_getbitsize.c bint_memory.c bint_mul_long.c bint_short_div.c \
bint_add.c bint_dec.c bint_divshort.c  bint_inc.c bint_mod.c bint_pow2long.c bint_sub.c \
bint_atobint.c bint_display.c bint_egcd.c bint_introutines.c bint_mod_exp.c bint_random.c \
bint_bits.c bint_div_2.c bint_gcd.c bint_inverse.c bint_mul.c bint_shift_right_digit.c
